--- a/artists.html
+++ b/artists.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Pottery Collective LDN - Artists</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="artists.css">
+        <link rel="stylesheet" href="./assets/styles/style.css">
+        <link rel="stylesheet" href="./assets/styles/artists.css">
 
     </head>
 
@@ -13,7 +13,7 @@
             <h2>Pottery Collective</h2>
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="#">Artists</a>
@@ -126,7 +126,7 @@
             <section id="links">
                 <ul>
                     <li>
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="#">Artists</a>
