--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Pottery Collective LDN</title>
-        <link rel="stylesheet" href="style.css">
+        <link rel="stylesheet" href="./assets/styles/style.css">
 
     </head>
 
