--- a/contact.html
+++ b/contact.html
@@ -2,8 +2,8 @@
 <html>
     <head>
         <title>Pottery Collective LDN - Contact</title>
-        <link rel="stylesheet" href="style.css">
-        <link rel="stylesheet" href="contact.css">
+        <link rel="stylesheet" href="./assets/styles/style.css">
+        <link rel="stylesheet" href="./assets/styles/contact.css">
 
     </head>
 
@@ -13,7 +13,7 @@
             <h2>Pottery Collective</h2>
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="artists.html">Artists</a>
@@ -83,7 +83,7 @@
             <section id="links">
                 <ul>
                     <li>
-                        <a href="home.html">Home</a>
+                        <a href="index.html">Home</a>
                     </li>
                     <li>
                         <a href="artists.html">Artists</a>
