--- a/about.html
+++ b/about.html
@@ -40,7 +40,7 @@
         
             <h1 id="title">Who are we?</h1>
 
-            <div id="about-us-text">
+            <div class="about-us-text">
                 <p >Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam facilisis ante ut porta vehicula. Cras vestibulum massa sed sapien malesuada hendrerit. 
                     Sed semper, felis non tincidunt congue, quam lorem dignissim nunc, a consequat lorem mauris vitae lacus. Cras consectetur risus a lacus dignissim, sit 
                     amet tempor mauris porttitor. Proin consectetur, lectus sed tristique lacinia, magna tortor pretium mi, bibendum tempus massa orci vitae augue.<br><br> Maecenas 
@@ -51,7 +51,7 @@
                 <img src="./assets/img/pexels-gabby-k-5302903.jpg" id="about-img"> 
             </div>
 
-            <div id="about-us-text">
+            <div class="about-us-text">
                 <img src="./assets/img/pexels-cottonbro-3094041.jpg" id="about-img2"> 
                 <p>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc a ultricies mi, eu consectetur dui. Cras dolor sapien, condimentum id sapien et, dictum cursus mi. Sed 
